Add multiple section tags for divided content

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>News</title>
+  <title>Eric M. Stevens | Jr. Java Developer</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <!--[if lt IE 9]>
   <script>
@@ -18,69 +18,51 @@
 </head>
 
 <body>
-  <header class="banner">
-    <h1>News</h1>
-    <p>Local and National News</p>
+
+  <header>
+
+    <div id="headerDiv">
+    <img id="emsPhoto" src="myPhoto.jpeg" alt="Close up photo of Eric M. Stevens" height="200" width="150">
+    <h1>Eric M. Stevens</h1>
+    <h3>Jr. Java Developer</h3>
+    <p><a href="mailto:estevens8@student.ccc.edu" target="_blank">estevens8@student.ccc.edu</a></p>
+    <li>Find me on <a href="https://www.instagram.com/schnitzelb_97/" target="_blank">Instagram</a></li>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="archive.html">Archives</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-  </nav>
-
   <main>
-
-    <section>
-      <h2>Local News</h2>
-      <article>
-        <header>
+    <h2 style="text-align: center;">My Portfolio</h2>
+    <section class="portfolioLinks">
           <h3>Fire fighters rescue man from building</h3>
           <p>(author, date)</p>
-        </header>
-        <p>This is the story text. This is the story text.</p>
-        <p>This is the story text. This is the story text.</p>
-      </article>
-
-      <article>
-        <header>
-          <h3>New Library to be built</h3>
-          <p>(author, date)</p>
-        </header>
-        <p>This is the story text. This is the story text.</p>
-        <p>This is the story text. This is the story text.</p>
-      </article>
     </section>
 
-    <section>
-      <h2>National News</h2>
-      <article>
-        <header>
-          <h3>Snow storm is making travel difficult</h3>
-          <p>(author, date)</p>
-        </header>
-        <p>This is the story text. This is the story text.</p>
-        <p>This is the story text. This is the story text.</p>
-      </article>
+    <section class="portfolioLinks">
+      <h3>Fire Fighters</h3>
 
-      <article>
-        <header>
-          <h3>Thousands are without power</h3>
-          <p>(author, date)</p>
-        </header>
-        <p>This is the story text. This is the story text.</p>
-        <p>This is the story text. This is the story text.</p>
-      </article>
     </section>
+
+    <section class="portfolioLinks">
+      <h3>Fire Fighters 3</h3>
+
+    </section>
+
+    <article>
+      <header>
+        <h3>New Library to be built</h3>
+        <p>(author, date)</p>
+      </header>
+    </article>
 
   </main>
-
-  <aside>
-    <h2>Be a news reporter</h2>
-    <p>If you see news happening - Send us a Text.</p>
-  </aside>
 
   <footer>
     <p>Footer Information</p>
